--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
     "better-sqlite3": "^12.4.1",
     "body-parser": "^2.2.0",
@@ -18,7 +19,9 @@
     "express": "^5.1.0",
     "lru-cache": "^11.2.2",
     "openai": "^6.3.0",
+    "postcss": "^8.5.6",
     "string-similarity": "^4.0.4",
+    "tailwindcss": "^4.1.14",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
